ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Rewrites the path after forwarding
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: nginx-service
            port: 
              number: 8080
